syntax = "proto3";

option csharp_namespace = "GrpcService1";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
 // rpc SayHello (HelloRequest) returns (HelloReply);
  rpc upload(stream File) returns(FileUploadResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
/*message FileUploadRequest {
    MetaData metadata = 1;
    File file = 2;
}*/
message File {
  bytes content = 1;
}
message FileUploadResponse {
  string name = 1;
 //Status status = 2;
}
